--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<title></title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="normalize.css" />
+	<link rel="stylesheet" href="campo_minado.css" />
+</head>
+<body>
+	<header>
+		<h1>Campo Minado</h1>
+	</header>
+	<nav>opciones juego</nav>
+	<section id="izquierda"></section>
+	<section id="derecha">
 		
+		<section id="panel">
+			<article class="item">
+				Statics
+			</article>
+		</section>
+		<section id="tweets">
+			<article class="tweets">
+				Tweets
+			</article>
+		</section>
+		
+	</section>
+	<footer>
+		<strong>Powered by Victor</strong>
+	</footer>
+</body>
+</html>
