Se agrego estilo a los bloques del juego

--- a/index.html
+++ b/index.html
@@ -8,10 +8,212 @@
 </head>
 <body>
 	<header>
-		<h1>Campo Minado</h1>
+		<h1>Mine Field</h1>
 	</header>
-	<nav>opciones juego</nav>
-	<section id="izquierda"></section>
+	<nav>Game Options</nav>
+	<section id="izquierda">
+		<center>
+			<div id="body_game">
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<!-- -->
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+				<div   class="caja"></div>	
+			</div>	
+		</center>
+		
+	</section>
+	<section id="derecha">
+	</section>
 	<footer>
 		<strong>Powered by Victor</strong>
 	</footer>
