--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	<style>
+    body{
+        background-color: green;
+    }
 .tr {
     height: 20px;
     border: 1px solid black;
@@ -15,15 +18,14 @@
 }
 .td {
     display: inline-block;
-    height: 20px;
+    height: 200px;
+    width: 200px;
     margin: 0;
     padding: 0;
+    border-color: black;
+    border-width: 5px;
 }
 </style>
-<div class="tr" style="width: 150px;">
-    <div class="td" style="width: 50px; background-color: #CCC;"></div><!-- 
-	--><div class="td" style="width: 50px; background-color: #AAA;"></div><!-- 
-	--><div class="td" style="width: 50px; background-color: #666;"></div><!-- -->
-</div>
+    <div class="td" style="background-color: #CCC;"></div>
 </body>
 </html>
